Increased to more than 282 libraries

--- a/packages/pango/config.yaml
+++ b/packages/pango/config.yaml
@@ -12,7 +12,8 @@ steps:
       - fontconfig
       - freetype
       - fribidi
-      - harfbuzz:a
+      - harfbuzz:b
+      - help2man
       - libpng
       - libthai
     run: build.bat
